--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "marked": "^11.1.0",
+    "@uiw/react-markdown-preview": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
