author Juan Diaz

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "markdownpreviewer",
+  "name": "markdown-previewer",
+  "author": "Juan Diaz",
   "private": true,
   "version": "0.0.0",
   "type": "module",
